--- a/Droid/Resources/layout/RoutineActivity.axml
+++ b/Droid/Resources/layout/RoutineActivity.axml
@@ -2,9 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-    <ListView
+    android:layout_height="fill_parent"
+    android:padding="8dp">
+    <RevTrainer.Droid.DrawView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@android:id/list" />
+        android:layout_height="match_parent" />
 </LinearLayout>
