--- a/iOS/Main.storyboard
+++ b/iOS/Main.storyboard
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="419">
+    <device id="retina5_5" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -33,14 +36,16 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="421">
                         <rect key="frame" x="0.0" y="20" width="414" height="50"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" colorSpace="calibratedRGB" red="0.19215686274509805" green="0.19607843137254902" blue="0.19607843137254902" alpha="1"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" colorSpace="calibratedWhite" white="1" alpha="1"/>
+                            <offsetWrapper key="textShadowOffset" horizontal="-725" vertical="0.0"/>
                         </textAttributes>
+                        <color key="barTintColor" colorSpace="calibratedWhite" white="0" alpha="1"/>
                     </navigationBar>
                     <connections>
                         <segue id="509" destination="201" kind="relationship" relationship="rootViewController"/>
                     </connections>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="422" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
